# kidney-disease-classification

./: .gitignore  README.md  app.py  dvc.yaml  main.py  pyproject.toml
assets/eda/: dataset_profile.json
config/: config.yaml
scripts/: eda.py
src/kidney_classifier/: __init__.py  exception.py
src/kidney_classifier/components/: data_ingestion.py  model_evaluation_mlflow.py  model_training.py  prepare_base_model.py
src/kidney_classifier/configuration/: configuration.py
src/kidney_classifier/entity/: config_entity.py
src/kidney_classifier/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_model_training.py  stage_04_model_evaluation.py
src/kidney_classifier/utils/: common.py
static/css/: style.css
static/js/: app.js
templates/: index.html
