[project]
name = "kidney-disease-classification"
version = "0.1.0"
description = "Kidney CT image classification with VGG16, Flask, DVC, and MLflow."
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
    "tensorflow==2.12.0",
    "pandas",
    "dvc",
    "mlflow==2.2.2",
    "notebook",
    "numpy",
    "matplotlib",
    "seaborn",
    "python-box==6.0.2",
    "PyYAML",
    "tqdm",
    "ensure==1.0.2",
    "joblib",
    "types-PyYAML",
    "scipy",
    "Flask",
    "Flask-Cors",
    "gdown",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
